internal/xds/translator/testdata/out/xds-ir/http-route-rewrite-url-prefix.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    name: first-listener/gateway.envoyproxy.io
    routes:
    - match:
        headers:
        - name: :authority
          stringMatch:
            exact: gateway.envoyproxy.io
        pathSeparatedPrefix: /origin
      name: rewrite-route
      route:
        cluster: rewrite-route-dest
        prefixRewrite: /rewrite
